<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical|end"
            android:text="@string/usernameHint" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:autofillHints="username"
            android:hint="@string/inputEmptyHint"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical|end"
            android:text="@string/passwordHint" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:autofillHints="password"
            android:hint="@string/inputEmptyHint"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical|end"
            android:text="@string/autoClockTimeHint" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <Button
                android:id="@+id/button_chooseAutoClockTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/timeChoiceButtonHint"
                tools:ignore="ButtonStyle,NestedWeights" />

            <Button
                android:id="@+id/button_cancelAutoClock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/cancelAutoClockHint"
                android:textSize="12sp"
                android:visibility="invisible"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/button_test"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/testButtonHint" />

        <Button
            android:id="@+id/button_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/saveButtonHint" />
    </LinearLayout>

    <TextView
        android:id="@+id/logTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical" />
</LinearLayout>